2000-12-20  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_LANG_COMPILER_GNU): Use a tabulation to indent
	`choke me' so that the SGI Fortran compiler really chokes on it.
	From Ezra Peisach.

2000-12-20  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at (Autoconf & Libtool): Ignore Libtool version
	1.3.[0-5].
	* tests/compile.at (GNU Fortran 77): Use AS_EXIT.

2000-12-20  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CLEANUP_FILE_IFELSE): Fix the regexp: the
	pattern ` state* ' was added many times for `*' was improperly
	escaped.
	(AT_INIT): Remove the data files before running the tests.
	Define AT_data_files and output it.
	(AT_SETUP): Don't.
	(_m4_divert(TEST)): Remove, now useless.

2000-12-20  Akim Demaille  <akim@epita.fr>

	* aclang.m4: `dnl' the AC_LANG_PUSH and AC_LANG_POP.
	(AC_PROG_CXXCPP, AC_PROG_CPP): Set the current language instead of
	just asserting it, since these macros can be called directly.
	Reported by Raja R. Harinath.

2000-12-19  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi (Installation Directory Variables): More info
	on prefix and exec_prefix.

2000-12-19  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_COMPILER_OBJEXT): Don't rely on
	_AC_COMPILE_IFELSE which uses ac_objext in a `test -s'.
	Reported by Lars J. Aas.

2000-12-19  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (AC_PROG_CPP without warnings, GNU Fortran 77):
	Use AC_TRY_COMMAND when running commands, to enrich the logs.

2000-12-19  Akim Demaille  <akim@epita.fr>, Mo DeJong  <mdejong@cygnus.com>

	* aclang.m4 (_AC_COMPILER_EXEEXT_DEFAULT): New.
	(_AC_COMPILER_EXEEXT_O): Extracted from...
	(_AC_COMPILER_EXEEXT): here.  Adjust.

2000-12-19  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CHECK): Make exit status report more
	visible.
	* tests/atspecific.m4 (AT_CHECK_AUTOCONF): Support FLAGS, STDOUT
	and STDERR.
	(AT_CHECK_CONFIGURE): Support plenty, cleanup defs when needed.
	Spread their use in the whole suite.