@@ -1,3 +1,9 @@
+2000-12-20  Lars J. Aas  <larsa@sim.no>
+
+	* aclang.m4 (_AC_COMPILER_OBJEXT, _AC_COMPILER_EXEEXT_O):
+	Make the order of arguments for ls count by splitting the ls
+	command into a sequence of ls commands.
+
 2000-12-20  Akim Demaille  <akim@epita.fr>
 
 	* aclang.m4 (_AC_LANG_COMPILER_GNU): Use a tabulation to indent
